# MadRaft

./: Cargo.toml
src/: lib.rs
src/raft/: raft.rs  tester.rs  tests.rs
