[package]
name = "madraft"
version = "0.1.0"
edition = "2018"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The labs of Raft consensus algorithm on MadSim."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madsim = { version = "0.2.31", features = ["rpc", "macros"]}
tokio = { version = "0.2", package = "madsim-tokio" }
log = "0.4"
rand = "0.9"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2"
